// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Extensions > matches snapshot with mixed extensions (info + error) 1`] = `
<DocumentFragment>
  <nav
    aria-label="Extensions"
    class="flex flex-col gap-2 max-h-max overflow-y-auto p-2"
  >
    <button
      class="extension-nav-button w-full min-h-[max-content] box-border cursor-pointer text-left px-2 py-1 rounded hover:bg-accent"
      tabindex="0"
      type="button"
    >
      alpha
    </button>
    <button
      class="extension-nav-button w-full min-h-[max-content] box-border cursor-pointer text-left px-2 py-1 rounded hover:bg-accent"
      tabindex="0"
      type="button"
    >
      beta
    </button>
  </nav>
</DocumentFragment>
`;

exports[`Extensions > matches snapshot with no extensions 1`] = `
<DocumentFragment>
  <nav
    aria-label="Extensions"
    class="flex flex-col gap-2 max-h-max overflow-y-auto p-2"
  />
</DocumentFragment>
`;
